--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div class="col-md-12">
 					<hr>
 					<p>
-						<a href="#" class="btn btn-primary" title="github"><i class="fa fa-github-alt"></i> GitHub</a>
+						<a href="https://github.com/Gix075/joomla-users-importer" class="btn btn-primary" title="github" target="_blank"><i class="fa fa-github-alt"></i> GitHub</a>
 						<a href="#documentation" class="btn btn-primary" title="github"><i class="fa fa-book"></i> Documentation</a>
 					</p>
 					<hr>
