--- a/joomla_users_importer/index.html
+++ b/joomla_users_importer/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Joomla Users Importer (v.2.0.1) | Import users from CSV file into Joomla 3 database -->
 		<title>Joomla Users Importer</title>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
